2011-02-10 Flamewing <flamewing.sonic@gmail.com>
	* src/main.cc, src/sseditor.cc: Disabling 'DEBUG'.
	* src/Makefile.am: Fixed install of images in *nix.

2011-02-09 Flamewing <flamewing.sonic@gmail.com>
	* Special Stage editor fully works in Linux.
	* Special Stage editor fully works in Windows.

2011-02-03 Flamewing <flamewing.sonic@gmail.com>
	* Initial commit.
